--- a/imc.html
+++ b/imc.html
@@ -5,10 +5,11 @@
   <link rel="stylesheet" href="imc.css">
 </head>
 <body>
+  <div class="module-border-wrap"><div>
   <button class="botao" id="btn">Calcule seu IMC</button>
+  </div></div>
   <span class="result" id="indice"></span><br>
   <!-- <span id="image"></span> -->
 </body>
 <script src="imc.js"></script>
-</body>
 </html>
